fix contrast

--- a/css/custom.style.css
+++ b/css/custom.style.css
@@ -41,8 +41,8 @@
   width: 50px;
   height: 50px;
   padding: 12px;
-  color: rgba(var(--bs-secondary-rgb), var(--bs-text-opacity)) !important;
-  border-color: rgba(var(--bs-secondary-rgb), var(--bs-text-opacity)) !important;
+  color: #abbbc8 !important;
+  border-color: #abbbc8 !important;
   transition: all 400ms;
 }
 .social-icon:hover {
